sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: not found: value floor
      if (!(plusPetit(floor(i),floor(i+ecart)))) {
                      ^AlgCombSort:13: error: not found: value floor
      if (!(plusPetit(floor(i),floor(i+ecart)))) {
                               ^AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
        echange(i,(i+ecart))
                ^AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
        echange(i,(i+ecart))
                    ^